[package]
name = "trowl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower = {version = "0.4.13", features = ["default", "tokio", "util"] }
tokio = {version = "1.36.0", features = ["default", "rt-multi-thread", "rt", "macros", "net"] }
tokio-util = {version = "0.7.10", features = ["net", "codec", "compat"]}
tokio-tower = "0.6.0"
tokio-macros = "2.2.0"
bincode = "2.0.0-rc.3"
pin-project = "1.1.5"

futures = "0.3.30"
futures-util = "0.3.30"
futures-sink = "0.3.30"
webrtc-dtls = "0.9.0"
webrtc-util = "0.8.1"
bytes = "1.5.0"
env_logger = "0.11.3"
log = "0.4.21"
chrono = "0.4.35"